# silica

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp  target_detection.cmake  todo.txt
doc/: embedded_peculiarities.dox  group_definitions.dox  mainpage.dox  signal_and_slots.dox
doc/doxygen/css/: extra.css
src/: KjutApplication.cpp  KjutByteArray.cpp  KjutByteBuffer.cpp  KjutCoarseTimer.cpp  KjutCore.cpp  KjutEventGenerator.cpp  KjutIODevice.cpp  KjutLogEntry.cpp  KjutLoggingSystem.cpp  KjutMutex.cpp  KjutUnitsOfTime.cpp  SilicaApplication.cpp  SilicaByteArray.cpp  SilicaByteBuffer.cpp  SilicaCoarseTimer.cpp  SilicaCore.cpp  SilicaEventGenerator.cpp  SilicaIODevice.cpp  SilicaLogEntry.cpp  SilicaLoggingSystem.cpp  SilicaMutex.cpp  SilicaUnitsOfTime.cpp
src/include/kjut/: Application.h  Array.h  Array.hpp  ByteArray.h  ByteBuffer.h  CoarseTimer.h  ContainerDefinitions.h  Debug.h  EventGenerator.h  IODevice.h  LogEntry.h  LoggingSystem.h  Macros.h  Map.h  Mutex.h  RingBuffer.h  Set.h  SignalSlot.h  UnitsOfTime.h
src/include/kjut/communication/: TextAPI.h
src/include/silica/: Application.h  Array.h  ByteArray.h  ByteBuffer.h  CoarseTimer.h  ContainerDefinitions.h  Debug.h  EventGenerator.h  IODevice.h  LogEntry.h  LoggingSystem.h  Macros.h  Map.h  Mutex.h  RingBuffer.h  ScopeGuard.h  Set.h  SignalSlot.h  UnitsOfTime.h
src/include/silica/communication/: TextAPI.h
src/linux/: linux_Mutex.cpp  linux_application.cpp  linux_event_logging.cpp  sources.cmake
src/windows_x86/: CMakeLists.txt  sources.cmake  windows_x86_Mutex.cpp  windows_x86_application.cpp  windows_x86_event_logging.cpp
tests/: SignalSpy.h  array_helpers.h  test_helpers.h  tst_application.cpp  tst_array.cpp  tst_array_different_types.cpp  tst_array_dynamic_size.cpp  tst_array_fixed_size.cpp  tst_array_fixed_size_dynamic_size_interchangability.cpp  tst_byte_array.cpp  tst_byte_buffer.cpp  tst_coarse_timer.cpp  tst_logentry.cpp  tst_map.cpp  tst_ringbuffer.cpp  tst_set.cpp  tst_signals_and_slots.cpp  tst_text_based_api.cpp
